feat: list pessoa
